Add index update on refresh all tool/workflows