@@ -46,6 +46,7 @@ import io.dockstore.webservice.core.Token;
 import io.dockstore.webservice.core.Tool;
 import io.dockstore.webservice.core.User;
 import io.dockstore.webservice.core.Workflow;
+import io.dockstore.webservice.helpers.ElasticManager;
 import io.dockstore.webservice.helpers.Helper;
 import io.dockstore.webservice.jdbi.GroupDAO;
 import io.dockstore.webservice.jdbi.TokenDAO;
@@ -70,7 +71,7 @@ import org.slf4j.LoggerFactory;
 @Produces(MediaType.APPLICATION_JSON)
 public class UserResource {
     private static final Logger LOG = LoggerFactory.getLogger(UserResource.class);
-
+    private final ElasticManager elasticManager;
     private final HttpClient client;
     private final UserDAO userDAO;
     private final GroupDAO groupDAO;
@@ -87,6 +88,7 @@ public class UserResource {
         this.tokenDAO = tokenDAO;
         this.workflowResource = workflowResource;
         this.dockerRepoResource = dockerRepoResource;
+        elasticManager = new ElasticManager();
     }
 
     @POST
@@ -140,7 +142,6 @@ public class UserResource {
             @ApiParam("Username of user to return") @PathParam("username") String username) {
         User user = userDAO.findByUsername(username);
         Helper.checkUser(authUser, user.getId());
-
         return user;
     }
 
@@ -151,7 +152,6 @@ public class UserResource {
     @ApiOperation(value = "Get user with id", response = User.class)
     public User getUser(@ApiParam(hidden = true) @Auth User authUser, @ApiParam("User to return") @PathParam("userId") long userId) {
         Helper.checkUser(authUser, userId);
-
         User user = userDAO.findById(userId);
         if (user == null) {
             throw new CustomWebApplicationException("User not found.", HttpStatus.SC_BAD_REQUEST);
@@ -386,7 +386,10 @@ public class UserResource {
         // Update user data
         Helper.updateUserHelper(authUser, userDAO, tokenDAO);
 
-        return dockerRepoResource.refreshToolsForUser(userId);
+        // TODO: Turn this into bulk index upsert
+        List<Tool> tools = dockerRepoResource.refreshToolsForUser(userId);
+        tools.forEach(tool -> elasticManager.handleIndexUpdate(tool, "update"));
+        return tools;
     }
 
     @GET
@@ -407,7 +410,12 @@ public class UserResource {
 
         // Refresh the user
         authUser = userDAO.findById(authUser.getId());
-        return FluentIterable.from(authUser.getEntries()).filter(Workflow.class).toList();
+        List<Workflow> finalWorkflows = authUser.getEntries().stream().filter(Workflow.class::isInstance).map(Workflow.class::cast)
+                .collect(Collectors.toList());
+
+        // TODO: Turn this into bulk index upsert
+        finalWorkflows.forEach(workflow -> elasticManager.handleIndexUpdate(workflow, "update"));
+        return finalWorkflows;
     }
 
     @GET
